spring boot 3 & remove jwt